--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-logger": "^1.1.0",
@@ -13,6 +14,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.64.8"
   },
